--- a/css/styles.css
+++ b/css/styles.css
@@ -624,7 +624,22 @@ img {
   border: 0;
 }
 
+.modal-checkbox-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.privacy-policy {
+  color: #4d5ae5;
+}
+
 .checkbox-span {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -650,5 +665,5 @@ img {
   cursor: pointer;
   background-color: #4d5ae5;
   border: none;
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
