--- a/css/styles.css
+++ b/css/styles.css
@@ -518,14 +518,14 @@ img {
 
 .modal-close-button {
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   top: 24px;
   right: 24px;
   width: 24px;
   height: 24px;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
@@ -540,11 +540,11 @@ img {
   border: none;
 }
 
-.modal-form-paragraph {
+.modal-form-text {
+  text-align: center;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  text-align: center;
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 16px;
@@ -570,11 +570,13 @@ img {
 .modal-input {
   width: 100%;
   height: 40px;
+  padding-left: 38px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-sizing: border-box;
 }
 
 .modal-input:focus {
@@ -593,6 +595,10 @@ img {
   fill: #4d5ae5;
 }
 
+.modal-form1 {
+  margin-bottom: 16px;
+}
+
 .modal-textarea {
   width: 100%;
   height: 120px;
@@ -607,10 +613,15 @@ img {
   outline: transparent;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-sizing: border-box;
 }
 
 .modal-textarea:focus {
   border-color: #4d5ae5;
+}
+
+.modal-form2 {
+  margin-bottom: 24px;
 }
 
 .visually-hidden {
@@ -645,7 +656,9 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
   margin-left: 8px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-checkbox-label input:checked + .checkbox-span {
@@ -654,8 +667,10 @@ img {
 
 .modal-submit-button {
   display: block;
+  margin: auto;
   min-width: 169px;
   height: 56px;
+  border-radius: 4px;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
