--- a/css/styles.css
+++ b/css/styles.css
@@ -509,8 +509,8 @@ img {
   width: 408px;
   min-height: 584px;
   background: #fcfcfc;
-  box-shadow: cu valorile 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px 24px;
@@ -538,6 +538,15 @@ img {
 .modal-close-button:focus {
   background-color: #404bbf;
   border: none;
+}
+
+.modal-icon-svg {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover,
+.modal-close-button:focus .modal-icon-svg {
+  fill: #ffffff;
 }
 
 .modal-form-text {
@@ -595,7 +604,7 @@ img {
   fill: #4d5ae5;
 }
 
-.modal-form1 {
+.modal-comment {
   margin-bottom: 16px;
 }
 
@@ -620,7 +629,7 @@ img {
   border-color: #4d5ae5;
 }
 
-.modal-form2 {
+.modal-checkbox {
   margin-bottom: 24px;
 }
 
