--- a/css/styles.css
+++ b/css/styles.css
@@ -670,8 +670,10 @@ img {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-checkbox-label input:checked + .checkbox-span {
-  background-color: #4d5ae5;
+.visually-hidden:checked .modal-checkbox-label + .checkbox-span {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
 }
 
 .modal-submit-button {
