--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,7 @@ img {
 }
 
 .menu-link {
+  display: flex;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -87,6 +88,7 @@ img {
   text-decoration: none;
   position: relative;
   color: #2e2f42;
+  padding: 24px 0;
 }
 
 .menu-link {
@@ -102,11 +104,6 @@ img {
   background-color: #404bbf;
   border-radius: 2px;
   height: 4px;
-}
-
-.menu-item,
-.menu-link {
-  padding: 24px 0;
 }
 
 .menu-link:hover,
@@ -468,7 +465,7 @@ img {
   font-weight: 400;
 }
 
-.form-button {
+.open-button {
   min-width: 165px;
   height: 40px;
   display: flex;
@@ -486,7 +483,7 @@ img {
   border-radius: 4px;
 }
 
-.form-button .form-button-svg {
+.open-button .form-button-svg {
   margin-left: 16px;
 }
 
@@ -497,8 +494,14 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
+  visibility: hidden;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-container.is-open {
+  visibility: visible;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 0ms;
 }
 
 .modal-window {
@@ -516,7 +519,7 @@ img {
   padding: 72px 24px 24px 24px;
 }
 
-.modal-close-button {
+.close-button {
   position: absolute;
   display: flex;
   align-items: center;
@@ -534,8 +537,8 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-button:hover,
-.modal-close-button:focus {
+.close-button:hover,
+.close-button:focus {
   background-color: #404bbf;
   border: none;
 }
@@ -600,7 +603,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus + .input-icon {
+.modal-input:focus .input-icon-svg {
   fill: #4d5ae5;
 }
 
@@ -634,7 +637,7 @@ img {
 }
 
 .visually-hidden {
-  position: absolute;
+  position: relative;
   width: 1px;
   height: 1px;
   margin: -1px;
@@ -670,7 +673,7 @@ img {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.visually-hidden:checked .modal-checkbox-label + .checkbox-span {
+.modal-checkbox-input:checked + .modal-checkbox-label .checkbox-span {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
