--- a/css/styles.css
+++ b/css/styles.css
@@ -501,7 +501,6 @@ img {
 
 .modal-container.is-open {
   visibility: visible;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 0ms;
 }
 
 .modal-window {
@@ -547,8 +546,8 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-button:hover,
-.modal-close-button:focus .modal-icon-svg {
+.close-button:hover,
+.close-button:focus .modal-icon-svg {
   fill: #ffffff;
 }
 
