--- a/css/styles.css
+++ b/css/styles.css
@@ -602,7 +602,7 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus .input-icon-svg {
+.modal-input:focus + .input-icon-svg {
   fill: #4d5ae5;
 }
 
