--- a/css/styles.css
+++ b/css/styles.css
@@ -516,6 +516,7 @@ img {
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px 24px;
+  box-sizing: border-box;
 }
 
 .close-button {
@@ -539,7 +540,7 @@ img {
 .close-button:hover,
 .close-button:focus {
   background-color: #404bbf;
-  border: none;
+  border: 1px solid #404bbf;
 }
 
 .modal-icon-svg {
@@ -633,6 +634,7 @@ img {
 
 .modal-checkbox {
   margin-bottom: 24px;
+  gap: 8px;
 }
 
 .visually-hidden {
@@ -643,7 +645,21 @@ img {
   padding: 0;
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
-  border: 0;
+}
+
+.checkbox-span {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  margin-right: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-checkbox-label {
@@ -657,24 +673,9 @@ img {
   color: #4d5ae5;
 }
 
-.checkbox-span {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  fill: transparent;
-  width: 16px;
-  height: 16px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 2px;
-  margin-left: 8px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .modal-checkbox-input:checked + .modal-checkbox-label .checkbox-span {
   background-color: #404bbf;
-  border: none;
+  border: 1px solid #404bbf;
   fill: #f4f4fd;
 }
 
@@ -694,4 +695,5 @@ img {
   background-color: #4d5ae5;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 4px 4px 0px #00000026;
 }
